--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shimmer: ^2.0.0
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.5
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_test:
